--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
-    "name": "risul/laravel-like-comment",
+    "name": "sanbak/laravel-like-comment",
     "description": "Ajax based site wide like and comment system for laravel",
     "type": "library",
     "license": "MIT",
     "keywords": ["laravel", "like", "comment", "ajax"],
     "authors": [
         {
-            "name": "risul",
-            "email": "risul321@gmail.com"
+            "name": "sanbak",
+            "email": "sanbak@bpract.com"
         }
     ],
     "minimum-stability": "stable",
